Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-5037

wrong color in inkpot theme, patch attached.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 2.3.0
    • Qt Creator 2.3.0
    • Editors
    • None
    • 64bit linux.
    • 92638be84f9e4647579c95a9ef0cc2e865a8758f, 48b6f9f47403078d52e407d1f2ebfae23bb1e204

      Look at the attached image, the blue link text is quite hard to read and doesn't match gvim, attached a modification which used the gvim, lighter blue color.

        1. inkpot_theme.png
          38 kB
          Campbell Barton
        2. inkpot.diff
          0.6 kB
          Campbell Barton
        For Gerrit Dashboard: QTCREATORBUG-5037
        # Subject Branch Project Status CR V

            leamelo Leandro T. C. Melo
            ideasman42 Campbell Barton
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes