CMake editor: Use keywords scheme for functions

The Link color from inkpot still needs to be changed.
This will be done in a following commit.

Task-number: QTCREATORBUG-5037
Change-Id: Ia8a5203067761ff6622258fd16f2027667637583x
Reviewed-on: http://codereview.qt.nokia.com/273
Reviewed-by: Thorbjørn Lindeijer <thorbjorn.lindeijer@nokia.com>
(cherry picked from commit a3daedc7b70a9e4f4db1db38add119741179dbed)
Reviewed-on: http://codereview.qt.nokia.com/392
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: hjk <qthjk@ovi.com>